==> venia/electronics/STM32/3.5inch_TFT_Touch_Shield_Code_V2/3.5inch_TFT_Touch_Shield_Code/Arduino/LCD_Show/DEV_Config.cpp <==
/******************************************************************************
**************************Hardware interface layer*****************************
* | file          :   DEV_Config.
* | version     :   V1.0
* | date        :   2017-12-11
* | function    :
    Provide the hardware underlying interface
******************************************************************************/
#include "DEV_Config.h"
#include <SPI.h>

/********************************************************************************
  function:    System Init and exit
  note:
    Initialize the communication method
********************************************************************************/
uint8_t System_Init(void)
{
  //set pin
  pinMode(LCD_CS, OUTPUT);
  pinMode(LCD_RST, OUTPUT);
  pinMode(LCD_DC, OUTPUT);
  pinMode(LCD_BL,OUTPUT);

  //set Serial
  Serial.begin(115200);
  
#if ARDUINO_AVR_UNO
  SPI.setDataMode(SPI_MODE0);
  SPI.setBitOrder(MSBFIRST);
  SPI.setClockDivider(SPI_CLOCK_DIV2);
  SPI.begin();
#else
  SPI.begin();
  SPI.beginTransaction(SPISettings(8 * 1000 * 1000, MSBFIRST, SPI_MODE0));
#endif

  return 0;
}

void PWM_SetValue(uint16_t value)
{        
    analogWrite(LCD_BL, value);
}

/********************************************************************************
  function:    Hardware interface
  note:
    SPI4W_Write_Byte(value) :
        hardware SPI
    I2C_Write_Byte(value, cmd):
        hardware I2C
********************************************************************************/
void SPI4W_Write_Byte(uint8_t DATA)
{
  SPI.transfer(DATA);
}
uint8_t SPI4W_Read_Byte(uint8_t DATA)
{
  return SPI.transfer(DATA);
}

/********************************************************************************
  function:    Delay function
  note:
    Driver_Delay_ms(xms) : Delay x ms
    Driver_Delay_us(xus) : Delay x us
********************************************************************************/
void Driver_Delay_ms(unsigned long xms)
{
  delay(xms);
}

void Driver_Delay_us(int xus)
{
  for (int j = xus; j > 0; j--);
}
